# ableos-uefi

./: Cargo.toml  ableos.efi  build.rs  run.sh
assets/: OVMF-pure-efi.fd
src/: able_graphics.rs  clipboard.rs  hardware.rs  kernel_state.rs  main.rs  uefi_loader.rs  util.rs
src/loader/: bios.rs  mod.rs  uefi_loader.rs
