[package]
name = "ableos"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlibc = "1.0.0"
log = { version = "0.4", default-features = false }
uefi = { version="*", features = ["exts"] }
uefi-services = "*"
spin = "0.5.2"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.0"
