[package]
name = "ableos"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
# Defines a feature named `webp` that does not enable any other features.
#bios = []
uefi_loader = []

[dependencies]
rlibc = "1.0.0"
log = { version = "0.4", default-features = false }
uefi = { version="*", features = ["exts"] }
uefi-services = "*"
spin = "0.5.2"
# rust-gpu = "0.1.0"
bootloader = { version = "0.9.8", features = ["map_physical_memory"] }

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.0"
